--- a/app/Resources/translations/messages.de.xlf
+++ b/app/Resources/translations/messages.de.xlf
@@ -356,6 +356,10 @@
                 <source>create_group</source>
                 <target>Gruppe erstellen</target>
             </trans-unit>
+            <trans-unit id="list_group">
+                <source>list_group</source>
+                <target>Gruppen</target>
+            </trans-unit>
         </body>
     </file>
 </xliff>
