--- a/app/Resources/translations/messages.en.xlf
+++ b/app/Resources/translations/messages.en.xlf
@@ -360,6 +360,18 @@
                 <source>list_group</source>
                 <target>Groups</target>
             </trans-unit>
+            <trans-unit id="group_actions">
+                <source>group_actions</source>
+                <target>Group actions</target>
+            </trans-unit>
+            <trans-unit id="group_new">
+                <source>group_new</source>
+                <target>New group</target>
+            </trans-unit>
+            <trans-unit id="group_list">
+                <source>group_list</source>
+                <target>Show groups</target>
+            </trans-unit>
         </body>
     </file>
 </xliff>
