added sorting, warning when no shifts and link to shift plan

--- a/app/Resources/translations/messages.de.xlf
+++ b/app/Resources/translations/messages.de.xlf
@@ -352,6 +352,10 @@
                 <source>template</source>
                 <target>Vorlage</target>
             </trans-unit>
+            <trans-unit id="your_shifts">
+                <source>your_shifts</source>
+                <target>Deine Schichten</target>
+            </trans-unit>
         </body>
     </file>
 </xliff>
