--- a/app/Resources/translations/messages.en.xlf
+++ b/app/Resources/translations/messages.en.xlf
@@ -352,6 +352,10 @@
                 <source>template</source>
                 <target>Template</target>
             </trans-unit>
+            <trans-unit id="your_shifts">
+                <source>your_shifts</source>
+                <target>Your upcoming shifts</target>
+            </trans-unit>
         </body>
     </file>
 </xliff>
