--- a/app/Resources/translations/messages.en.xlf
+++ b/app/Resources/translations/messages.en.xlf
@@ -356,6 +356,10 @@
                 <source>your_shifts</source>
                 <target>Your upcoming shifts</target>
             </trans-unit>
+            <trans-unit id="no_shifts">
+                <source>no_shifts</source>
+                <target>You have no upcoming shifts</target>
+            </trans-unit>
         </body>
     </file>
 </xliff>
