--- a/app/Resources/translations/messages.de.xlf
+++ b/app/Resources/translations/messages.de.xlf
@@ -360,6 +360,10 @@
                 <source>no_shifts</source>
                 <target>Du bist in keinen kommenden Schichten eingetragen</target>
             </trans-unit>
+            <trans-unit id="order_index">
+                <source>order_index</source>
+                <target>Sortier-Index</target>
+            </trans-unit>
         </body>
     </file>
 </xliff>
