--- a/app/Resources/translations/messages.de.xlf
+++ b/app/Resources/translations/messages.de.xlf
@@ -364,6 +364,10 @@
                 <source>order_index</source>
                 <target>Sortier-Index</target>
             </trans-unit>
+            <trans-unit id="plan_collection">
+                <source>plan_collection</source>
+                <target>Plan Sammlungen</target>
+            </trans-unit>
         </body>
     </file>
 </xliff>
