--- a/app/Resources/translations/messages.en.xlf
+++ b/app/Resources/translations/messages.en.xlf
@@ -372,6 +372,10 @@
                 <source>no_plan_collections</source>
                 <target>No plan collection created</target>
             </trans-unit>
+            <trans-unit id="new_plan_collection">
+                <source>new_plan_collection</source>
+                <target>New Plan Collection</target>
+            </trans-unit>
         </body>
     </file>
 </xliff>
