--- a/app/Resources/translations/messages.en.xlf
+++ b/app/Resources/translations/messages.en.xlf
@@ -376,9 +376,9 @@
                 <source>new_plan_collection</source>
                 <target>New Plan Collection</target>
             </trans-unit>
-            <trans-unit id="link">
-                <source>link</source>
-                <target>Link</target>
+            <trans-unit id="sign_up">
+                <source>sign_up</source>
+                <target>Sign up</target>
             </trans-unit>
         </body>
     </file>
