--- a/app/Resources/translations/messages.en.xlf
+++ b/app/Resources/translations/messages.en.xlf
@@ -392,6 +392,10 @@
                 <source>edit_person</source>
                 <target>Edit</target>
             </trans-unit>
+            <trans-unit id="people_needed_for_shift">
+                <source>people_needed_for_shift</source>
+                <target>People needed</target>
+            </trans-unit>
         </body>
     </file>
 </xliff>
